# Ufwi

./: plan_reseau  plan_reseau.txt  rapport.tex~  rapport.toc  url_interessant
carnet_de_bord/: compte_rendu_rdv_2012-02-03  compte_rendu_rdv_2012-02-03~  compte_rendu_rdv_2012_03_16  log_Frolich_valentin  log_Frolich_valentin~  log_barotte_simon  log_pierre_cyril  log_robin_maxime  log_robin_maxime~  planning  reunion_2012-01-30
etude_de_base/ufwi-administration-suite-ufwi-conf/: ChangeLog  INSTALL  INSTALL.client  Makefile  README  buildbot.conf  pyflakes.sh  setup_ufwi_conf_backend.py  setup_ufwi_conf_client.py  setup_ufwi_conf_common.py  ufwi_conf_qt
etude_de_base/ufwi-administration-suite-ufwi-conf/debian/: changelog  control  copyright  nuconf-backend.dirs  nuconf-backend.install  nuconf-backend.postinst  nuconf-client.install  nuconf-client.menu  nuconf-common.install  nuconf-common.postinst  rules
etude_de_base/ufwi-administration-suite-ufwi-conf/tests/: commonNetwork.py  keytab-test  templateConfig.py  templateDHCP.py  templateHA.py  templateNetwork.py  templateRoutedNetworks.py  templateUserDirectory.py  testAccess.py  testBonding.py  testBondingVlan.py  testConfigHA.py  testConfigNoHA.py  testDHCP1.py  testDHCP2.py  testDHCP3.py  testDNS.py  testNetwork1.py  testOpenVpn.py  testRoute1.py  testRoute2.py  testUserDirectoryKERBEROSAD1.py  testUserDirectoryKERBEROSAD2.py  testUserDirectoryKERBEROSAD3.py  testUserDirectoryKerberos_NND.py  testUserDirectoryKerberos_keytab.py  testUserDirectoryLDAPLDAP1.py  testUserDirectoryRADAD1.py  testUserDirectoryRADLDAP1.py  testVlansDestroyed.py
etude_de_base/ufwi-administration-suite-ufwi-conf/ufwi_conf/: version.py
etude_de_base/ufwi-administration-suite-ufwi-log/: INSTALL  Makefile  TODO  run_tests.sh  setup_ufwi_log.py  setup_ufwi_logqt.py  test_doc.py
etude_de_base/ufwi-administration-suite-ufwi-log/debian/: README.Debian  changelog  control  copyright  nulog-qt.install  nulog-qt.menu  nulog.default  nulog.dirs  nulog.docs  nulog.install  nulog.postinst  rules
etude_de_base/ufwi-administration-suite-ufwi-log/doc/: LICENSE  Makefile  exporter.rst  frontend_fragments.rst  intro.rst  storage-default  style.css  tables.rst  user_settings.rst
etude_de_base/ufwi-administration-suite-ufwi-log/scripts/: ipv4.sql  ipv6.sql  pgsql-ulogd2-ext.sql  traffic_maker.py  triggers.py  ulog_rotate.py
etude_de_base/ufwi-administration-suite-ufwi-log/ufwi_log/: Makefile
etude_de_base/ufwi-administration-suite-ufwi-multisite/: Makefile  multisite.fr.ts  multisite.qrc  setup.py
etude_de_base/ufwi-administration-suite-ufwi-rpcc-qt/: .gitignore  Makefile  doc_test.py  pyflakes.sh  setup.py  ufwi-rpcc-qt.fr.ts
etude_de_base/ufwi-administration-suite-ufwi-rpcd/: AUTHORS  ChangeLog  INSTALL  Makefile  README  buildbot.conf  client.sh  default.ufwi-rpcd.conf  doc_test.py  pyflakes.sh  run_tests.sh  setup.py  ufwi-rpcd.fr.ts  ufwi-rpcd.sh  ufwi-rpcd.tac
etude_de_base/ufwi-administration-suite-ufwi-ruleset/: AUTHORS  ChangeLog  INSTALL  INSTALL.qt  Makefile  NEWS  README  TODO  buildbot.conf  fixflakes.pl  foss_moulette  pychecker.sh  pyflakes.sh  run_tests.sh  setup_ufwi_ruleset.py  setup_ufwi_rulesetqt.py  start.sh  test_doc.py  ufwi_ruleset_qt
etude_de_base/ufwi-authd/: Makefile.am  client.py  cmdline.py  setup.py  ufwi-authd  ufwi-authd-cmd.in  version.py
etude_de_base/ufwi-authd/etude_conf/: authd.conf  etude_fichier_conf
etude_de_base/ufwi-daemons-ufwi-base/: ChangeLog  INSTALL  configure.ac
etude_de_base/ufwi-daemons-ufwi-base/src/: Makefile.am  config-table.c  config-table.h  ext_proto.c  libufwibase.pc.in  log.c  log.h  strings.c  ufwibase.h
etude_de_base/ufwi-daemons-ufwi-client/: INSTALL  configure.ac
etude_de_base/ufwi-daemons-ufwi-client/src/: Makefile.am  ufwi-client.c
etude_de_base/ufwi-daemons-ufwi-clientlib/: INSTALL  Makefile.am  configure.ac
etude_de_base/ufwi-daemons-ufwi-clientlib/src/: Makefile.am  checks.c  checks.h  iconv.c  internal.c  internal.h  libufwiclient.c  libufwiclient.h  libufwiclient.pc.in  nuclient_conf.c  nuclient_conf.h  proc.c  sending.c  sys_config.c  sys_config.h  tcptable.c  ufwiclient.h  ufwiclient_plugins.c  ufwiclient_plugins.h
etude_de_base/ufwi-daemons-ufwi-clientlib/src/plugins/luser/: Makefile.am  luser_main.c
etude_de_base/ufwi-daemons-ufwi-clientlib/src/plugins/multi/: Makefile.am  multi_main.c
etude_de_base/ufwi-daemons-ufwi-clientlib/src/tests/: Makefile.am  dummy_client.c
etude_de_base/ufwi-daemons-ufwi-confparser/: INSTALL  Makefile.am  configure.ac
etude_de_base/ufwi-daemons-ufwi-confparser/src/: Makefile.am  config-parser.lex.c  config-parser.lex.l  config-parser.yacc.c  config-parser.yacc.h  config-parser.yacc.y  libufwiconfparser.pc.in  t_conf1.c  t_conf2.c  t_conf3.c
etude_de_base/ufwi-daemons-ufwi-ssl/: AUTHORS  INSTALL  Makefile.am  configure.ac
etude_de_base/ufwi-daemons-ufwi-ssl/src/: Makefile.am  libufwissl.pc.in  ufwissl.h  ufwissl_alloc.c  ufwissl_alloc.h  ufwissl_config.h  ufwissl_constants.h  ufwissl_dates.c  ufwissl_dates.h  ufwissl_defs.h  ufwissl_gnutls.c  ufwissl_gnutls_ctx.c  ufwissl_gnutls_local.c  ufwissl_hash.c  ufwissl_hash.h  ufwissl_internal.h  ufwissl_openssl.c  ufwissl_openssl_ctx.c  ufwissl_openssl_local.c  ufwissl_private.h  ufwissl_privssl.h  ufwissl_request.c  ufwissl_request.h  ufwissl_session.c  ufwissl_session.h  ufwissl_socket.c  ufwissl_socket.h  ufwissl_ssl.h  ufwissl_ssl_common.c  ufwissl_ssl_common.h  ufwissl_string.c  ufwissl_string.h  ufwissl_tool.c  ufwissl_utils.c  ufwissl_utils.h
etude_de_base/ufwi-filterd/: ChangeLog  INSTALL  Makefile.am  README  configure.ac
etude_de_base/ufwi-filterd/conf/: Makefile.am  filterd.conf
etude_de_base/ufwi-filterd/src/: Makefile.am  audit.c  authsrv.c  common.c  doxygen.cfg  iface.c  main.c  nufw.h  nufwconf.c  packetsrv.c  structure.h  tls.c
rapport/: lastpage.sty  rapport.aux  rapport.fdb_latexmk  rapport.out  rapport.tex  rapport.tex.backup  rapport.tex~  rapport.toc  slides.aux  slides.nav  slides.out  slides.tex  slides.tex.backup  slides.tex~  slides.toc
(+1129 files in other folders)
